--- a/capstone/src/BMICalculator.form
+++ b/capstone/src/BMICalculator.form
@@ -18,14 +18,6 @@
           <grid row="0" column="1" row-span="1" col-span="3" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <component id="8de5b" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="BMI Calculator"/>
-        </properties>
-      </component>
       <hspacer id="25fd8">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="3" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -36,6 +28,7 @@
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="JetBrains Mono"/>
           <text value="Name:"/>
         </properties>
       </component>
@@ -57,6 +50,7 @@
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="JetBrains Mono"/>
           <text value="Age:"/>
         </properties>
       </component>
@@ -78,6 +72,7 @@
           <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="JetBrains Mono"/>
           <text value="Height (cm): "/>
         </properties>
       </component>
@@ -99,6 +94,7 @@
           <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="JetBrains Mono"/>
           <text value="Weight (kg):"/>
         </properties>
       </component>
@@ -120,6 +116,7 @@
           <grid row="11" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="JetBrains Mono"/>
           <text value="Gender:"/>
         </properties>
       </component>
@@ -129,6 +126,7 @@
         </constraints>
         <properties>
           <enabled value="true"/>
+          <font name="JetBrains Mono"/>
           <selected value="false"/>
           <text value="Male"/>
         </properties>
@@ -139,6 +137,7 @@
         </constraints>
         <properties>
           <enabled value="true"/>
+          <font name="JetBrains Mono"/>
           <selected value="false"/>
           <text value="Female"/>
         </properties>
@@ -148,7 +147,18 @@
           <grid row="12" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="JetBrains Mono"/>
           <text value="Calculate"/>
+        </properties>
+      </component>
+      <component id="8de5b" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="JetBrains Mono" size="24"/>
+          <foreground color="-1764589"/>
+          <text value="BMI Calculator"/>
         </properties>
       </component>
     </children>
